FIX: Contrast Ratio

--- a/src/scss/components/_output-control.scss
+++ b/src/scss/components/_output-control.scss
@@ -20,10 +20,10 @@
 
     @include theme("dark") {
       color: colour("white");
-      background: colour("grey50");
+      background: colour("overlay_dark");
 
       &:after {
-        background: colour("grey50");
+        background: colour("overlay_dark");
       }
     }
 
